--- a/la-mia-pizzeria-static/Views/Home/Index.cshtml
+++ b/la-mia-pizzeria-static/Views/Home/Index.cshtml
@@ -1,47 +1,35 @@
 ﻿@model List<Pizza>
 @{
     ViewData["Title"] = "Home Page";
+    Layout = null;
 }
-<style>
-    .card {
-        height: 600px;
-        cursor:pointer;
-        transition: box-shadow 0.3s, background-color 0.3s;
-    }
-        .card:hover {
-            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6); 
-            background-color: #f8f9fa; 
-        }
-
-    .card-img-top {
-        height: 400px; 
-        object-fit: cover; 
-    }
-
-    .card-footer {
-        padding: 1.5rem;
-        background-color: rgba(0,0,0,.0);
-        border-top: none;
-    }
-</style>
-
-<div class="container">
-    <h1 class="text-center mb-5">Lista Pizze:</h1>
-    <div class="row">
-        @foreach (var pizza in Model)
-        {
-            <div class="col-lg-4 mb-4">
-                <div class="card">
-                    <img src="@Url.Content(pizza.ImagePath)" class="card-img-top" alt="Foto Pizza">
-                    <div class="card-body">
-                        <h5 class="card-title"><strong>@pizza.Name</strong></h5>
-                        <p class="card-text">@pizza.Description</p>
-                    </div>
-                    <div class="card-footer">
-                        <h5 class="card-text text-end">Prezzo: <strong>@pizza.Price €</strong></h5>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>La Mia Pizzeria - Menù</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="/css/site.css" rel="stylesheet" />
+</head>
+<body>
+    <div class="container my-5">
+        <h1 class="text-center mb-5">Lista Pizze:</h1>
+        <div class="row">
+            @foreach (var pizza in Model)
+            {
+                <div class="col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="@Url.Content(pizza.ImagePath)" class="card-img-top" alt="Foto Pizza">
+                        <div class="card-body">
+                            <h5 class="card-title"><strong>@pizza.Name</strong></h5>
+                            <p class="card-text">@pizza.Description</p>
+                        </div>
+                        <div class="card-footer">
+                            <h5 class="card-text text-end">Prezzo: <strong>@pizza.Price €</strong></h5>
+                        </div>
                     </div>
                 </div>
-            </div>
-        }
+            }
+        </div>
     </div>
-</div>
+</body>
